<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_height="150dp"
    android:layout_margin="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginStart="24dp"
            android:src="@color/colorPrimary"
            android:contentDescription="@string/content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/img_profile"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textSize="24sp"
            app:layout_constraintLeft_toRightOf="@id/img_profile"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintLeft_toRightOf="@id/img_profile"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lihat_detail"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/url"
            app:layout_constraintLeft_toRightOf="@id/img_profile"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>